Fix scrollbars styling
Browsers are not able to ignore invalid css selectors when they are 
separated by comma, they entire block is ignored.

--- a/ui/library.reel/library.css
+++ b/ui/library.reel/library.css
@@ -189,22 +189,43 @@
 
 /* Scrollbar -------------------------------- */
 
-.Library ::-webkit-scrollbar,
-.Library ::-moz-scrollbar,
-.Library ::-ms-scrollbar,
-.Library ::scrollbar {
+.Library ::-webkit-scrollbar {
     -webkit-appearance: none;
+    width: 3px;
+    height: 0px;
+    background-color: hsl(0, 0%, 18%);
+}
+.Library ::-moz-scrollbar {
     -moz-appearance: none;
+    width: 3px;
+    height: 0px;
+    background-color: hsl(0, 0%, 18%);
+}
+.Library ::-ms-scrollbar {
     -ms-appearance: none;
+    width: 3px;
+    height: 0px;
+    background-color: hsl(0, 0%, 18%);
+}
+.Library ::scrollbar {
     appearance: none;
     width: 3px;
     height: 0px;
     background-color: hsl(0, 0%, 18%);
 }
 
-.Library ::-webkit-scrollbar-thumb,
-.Library ::-moz-scrollbar-thumb,
-.Library ::-ms-scrollbar-thumb,
+.Library ::-webkit-scrollbar-thumb {
+    border: none;
+    background-color: hsl(0, 0%, 32%);
+}
+.Library ::-moz-scrollbar-thumb {
+    border: none;
+    background-color: hsl(0, 0%, 32%);
+}
+.Library ::-ms-scrollbar-thumb {
+    border: none;
+    background-color: hsl(0, 0%, 32%);
+}
 .Library ::scrollbar-thumb {
     border: none;
     background-color: hsl(0, 0%, 32%);
